--- a/atox/src/main/res/values/strings.xml
+++ b/atox/src/main/res/values/strings.xml
@@ -106,6 +106,10 @@
     <string name="tox_service_running">aTox is running…</string>
     <string name="pref_heading_network">Network</string>
     <string name="pref_udp_enabled">UDP enabled</string>
+    <string name="pref_network_mode">Mode</string>
+    <string name="pref_network_mode_udp">UDP</string>
+    <string name="pref_network_mode_tcp">TCP</string>
+    <string name="pref_network_mode_auto">Auto</string>
     <string name="pref_heading_general">General</string>
     <string name="pref_run_at_startup">Run at boot</string>
     <string name="friend_request">Friend request</string>
