--- a/atox/src/main/res/values/strings.xml
+++ b/atox/src/main/res/values/strings.xml
@@ -182,4 +182,11 @@
     <string name="channel_profile_locked_explanation">Sent when your profile needs to be unlocked for aTox to run</string>
     <string name="atox_profile_locked">aTox profile locked</string>
     <string name="tap_to_unlock_and_start_atox">Tap to unlock your profile and start aTox</string>
+
+    <string name="edit_profile_icon">Edit profile icon</string>
+    <string name="toxid_sharing_instructions">Share this Tox ID with others who you want them to send you a friendship request.
+        Just click on it to share, or click the copy icon.</string>
+    <string name="qr_code_sharing_instructions">Or ask them to scan in the app this QR code.</string>
+    <string name="tox_id_qr_code">QR code of Tox ID</string>
+    <string name="copy_tox_id_button">Copy Tox ID button</string>
 </resources>
