--- a/atox/src/main/res/values/strings.xml
+++ b/atox/src/main/res/values/strings.xml
@@ -149,6 +149,7 @@
     <string name="contact_list_delete_contact_confirm">Really delete \"%1$s\" from contacts?</string>
 
     <string name="call">Call</string>
+    <string name="calling">Calling…</string>
     <string name="microphone_control">Microphone control</string>
     <string name="error_simultaneous_calls">Participating in multiple calls at the same time is not supported</string>
     <string name="end_call">End call</string>
@@ -164,6 +165,7 @@
     <string name="contact_default_name">Unknown</string>
     <string name="incoming_call">Incoming call</string>
     <string name="incoming_call_from">Incoming call from %1$s</string>
+    <string name="call_waiting_for_contact">Calling %1$s…</string>
     <string name="call_mic_permission_needed">Microphone permission required to enable sending audio</string>
     <string name="password">Password</string>
     <string name="incorrect_password">Incorrect password</string>
